--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TheCodeBookProject.Web.App-20160120045451.mdf;Initial Catalog=aspnet-TheCodeBookProject.Web.App-20160120045451;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
