--- a/Source/Web/TheCodeBookProject.Web.Common/TheCodeBookProject.Web.Common.csproj
+++ b/Source/Web/TheCodeBookProject.Web.Common/TheCodeBookProject.Web.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EE46989-5271-452F-AB58-6801A3E52251}</ProjectGuid>
+    <ProjectGuid>{D1192583-FA30-4C13-9FEB-D7ED7C8C991B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TheCodeBookProject.Services.Data</RootNamespace>
-    <AssemblyName>TheCodeBookProject.Services.Data</AssemblyName>
+    <RootNamespace>TheCodeBookProject.Web.Common</RootNamespace>
+    <AssemblyName>TheCodeBookProject.Web.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Identity\IdentityHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
