fixed seed user problem

--- a/Source/Web/TheCodeBookProject.Web.App/Web.Release.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.Release.config
@@ -2,18 +2,10 @@
 
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
-<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an attribute "name" that has a value of "MyDB".
-    
+<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">    
     <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+        <add name="DefaultConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
     </connectionStrings>
-  -->
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
