--- a/Source/Data/TheCodeBookProject.Data.Models/TheCodeBookProject.Data.Models.csproj
+++ b/Source/Data/TheCodeBookProject.Data.Models/TheCodeBookProject.Data.Models.csproj
@@ -57,8 +57,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application.cs" />
+    <Compile Include="ApplicatonStatus.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="Project.cs" />
+    <Compile Include="ProjectStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
