--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
