--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -13,6 +13,17 @@
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <siteMap defaultProvider="secureProvider">
+      <providers>
+        <add name="secureProvider"
+            type="System.Web.XmlSiteMapProvider"
+            siteMapFile="Web.sitemap"
+            securityTrimmingEnabled="true" />
+      </providers>
+    </siteMap>
+    <customErrors mode="RemoteOnly" defaultRedirect="~/ErrorPages/NotFound.aspx">
+      <error statusCode="404" redirect="~/ErrorPages/NotFound.aspx"/>
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -25,36 +36,11 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-    <membership>
-      <providers>
-        <!--
-	      ASP.NET Membership is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
-        -->
-        <clear />
-      </providers>
-    </membership>
     <profile>
       <providers>
-        <!--
-	      ASP.NET Membership Profile is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
-        -->
         <clear />
       </providers>
     </profile>
-    <roleManager>
-      <!--
-	        ASP.NET Membership Role is disabled in this template. Please visit the following link http://go.microsoft.com/fwlink/?LinkId=301889 to learn about the ASP.NET Membership support in this template
-        -->
-      <providers>
-        <clear />
-      </providers>
-    </roleManager>
-    <!--
-            If you are deploying to a cloud environment that has multiple web server instances,
-            you should change session state mode from "InProc" to "Custom". In addition,
-            change the connection string named "DefaultConnection" to connect to an instance
-            of SQL Server (including SQL Azure and SQL  Compact) instead of to SQL Server Express.
-      -->
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
@@ -62,6 +48,10 @@
     </sessionState>
   </system.web>
   <system.webServer>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" subStatusCode="0" path="/ErrorPages/NotFound.aspx" responseMode="Redirect" />
+    </httpErrors>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
