Added IsDeactivated property to the User model

--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -21,8 +21,9 @@
             securityTrimmingEnabled="true" />
       </providers>
     </siteMap>
-    <customErrors mode="RemoteOnly" defaultRedirect="~/ErrorPages/NotFound.aspx">
+    <customErrors mode="RemoteOnly" defaultRedirect="~/ErrorPages/NotFound.aspx" redirectMode="ResponseRewrite">
       <error statusCode="404" redirect="~/ErrorPages/NotFound.aspx"/>
+      <error statusCode="403" redirect="~/Home.aspx"/>
     </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
@@ -50,11 +51,14 @@
   <system.webServer>
     <httpErrors errorMode="Custom">
       <remove statusCode="404" subStatusCode="-1" />
-      <error statusCode="404" subStatusCode="0" path="/ErrorPages/NotFound.aspx" responseMode="Redirect" />
+      <remove statusCode="403" subStatusCode="-1" />
+      <error statusCode="404" subStatusCode="0" path="~/ErrorPages/NotFound.aspx" responseMode="Redirect" />
+      <error statusCode="403" subStatusCode="0" path="~/Home.aspx" responseMode="Redirect" />
     </httpErrors>
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
     </modules>
+    <handlers accessPolicy="Read, Script" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
