User profile page completed

--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework"
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <siteMap defaultProvider="secureProvider">
@@ -21,12 +20,9 @@
             securityTrimmingEnabled="true" />
       </providers>
     </siteMap>
-    <customErrors mode="RemoteOnly" defaultRedirect="~/ErrorPages/NotFound.aspx" redirectMode="ResponseRewrite">
-      <error statusCode="404" redirect="~/ErrorPages/NotFound.aspx"/>
-      <error statusCode="403" redirect="~/Home.aspx"/>
-    </customErrors>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true"
+                 targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
       <namespaces>
@@ -34,7 +30,9 @@
         <add namespace="Microsoft.AspNet.Identity" />
       </namespaces>
       <controls>
-        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms"
+             namespace="Microsoft.AspNet.Web.Optimization.WebForms"
+             tagPrefix="webopt" />
       </controls>
     </pages>
     <profile>
@@ -42,18 +40,33 @@
         <clear />
       </providers>
     </profile>
-    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
+    <sessionState mode="InProc"
+                  customProvider="DefaultSessionProvider">
       <providers>
-        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
+        <add name="DefaultSessionProvider"
+             type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+             connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
   </system.web>
   <system.webServer>
+    <!-- Default start page for root -->
+    
+    <defaultDocument enabled="true">
+      <files>
+        <clear/>
+        <add value="Home.aspx"/>
+      </files>
+    </defaultDocument>
+
+    <!-- Add redirects here, e.g 403 forbidden access -->
     <httpErrors errorMode="Custom">
-      <remove statusCode="404" subStatusCode="-1" />
-      <remove statusCode="403" subStatusCode="-1" />
-      <error statusCode="404" subStatusCode="0" path="~/ErrorPages/NotFound.aspx" responseMode="Redirect" />
-      <error statusCode="403" subStatusCode="0" path="~/Home.aspx" responseMode="Redirect" />
+      <remove statusCode="404"
+              subStatusCode="-1" />
+      <error statusCode="404"
+             subStatusCode="0"
+             path="ErrorPages/NotFound.aspx"
+             responseMode="Redirect" />
     </httpErrors>
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
