--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -1,28 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection"
-         connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true"
-         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <siteMap defaultProvider="secureProvider">
       <providers>
-        <add name="secureProvider"
-            type="System.Web.XmlSiteMapProvider"
-            siteMapFile="Web.sitemap"
-            securityTrimmingEnabled="true" />
+        <add name="secureProvider" type="System.Web.XmlSiteMapProvider" siteMapFile="Web.sitemap" securityTrimmingEnabled="true" />
       </providers>
     </siteMap>
     <authentication mode="None" />
-    <compilation debug="true"
-                 targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
       <namespaces>
@@ -30,9 +22,7 @@
         <add namespace="Microsoft.AspNet.Identity" />
       </namespaces>
       <controls>
-        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms"
-             namespace="Microsoft.AspNet.Web.Optimization.WebForms"
-             tagPrefix="webopt" />
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
     <profile>
@@ -40,12 +30,9 @@
         <clear />
       </providers>
     </profile>
-    <sessionState mode="InProc"
-                  customProvider="DefaultSessionProvider">
+    <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
-        <add name="DefaultSessionProvider"
-             type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             connectionStringName="DefaultConnection" />
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
   </system.web>
@@ -54,19 +41,15 @@
     
     <defaultDocument enabled="true">
       <files>
-        <clear/>
-        <add value="Home.aspx"/>
+        <clear />
+        <add value="Home.aspx" />
       </files>
     </defaultDocument>
 
     <!-- Add redirects here, e.g 403 forbidden access -->
     <httpErrors errorMode="Custom">
-      <remove statusCode="404"
-              subStatusCode="-1" />
-      <error statusCode="404"
-             subStatusCode="0"
-             path="ErrorPages/NotFound.aspx"
-             responseMode="Redirect" />
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" subStatusCode="0" path="ErrorPages/NotFound.aspx" responseMode="Redirect" />
     </httpErrors>
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
