--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -15,9 +15,9 @@
     <siteMap defaultProvider="secureProvider">
       <providers>
         <add name="secureProvider"
-            type="System.Web.XmlSiteMapProvider"
-            siteMapFile="Web.sitemap"
-            securityTrimmingEnabled="true" />
+             type="System.Web.XmlSiteMapProvider"
+             siteMapFile="Web.sitemap"
+             securityTrimmingEnabled="true"/>
       </providers>
     </siteMap>
     <authentication mode="None" />
@@ -49,9 +49,20 @@
       </providers>
     </sessionState>
   </system.web>
+  <location path="Admin">
+    <system.web>
+      <authorization>
+        <allow roles="admin"/>
+        <deny users="*"/>
+      </authorization>
+      <customErrors>
+        <error statusCode="302" redirect="Contact.aspx" />
+      </customErrors>
+    </system.web>
+  </location>
   <system.webServer>
     <!-- Default start page for root -->
-    
+
     <defaultDocument enabled="true">
       <files>
         <clear/>
