Fixed lame merge.

--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -10,7 +10,9 @@
   <system.web>
     <siteMap defaultProvider="secureProvider">
       <providers>
-            securityTrimmingEnabled="true" />      </providers>
+        <add name="secureProvider" type="System.Web.XmlSiteMapProvider"
+             siteMapFile="web.sitemap" securityTrimmingEnabled="true"/>
+      </providers>
     </siteMap>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
