--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -7,11 +7,26 @@
     <!--<add name="DefaultConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+  <!-- Definitions for roles access -->
+  <location path="Admin">
+    <system.web>
+      <authorization>
+        <allow roles="admin"/>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
+  <!-- Sitemap definitions -->
   <system.web>
-    <siteMap defaultProvider="secureProvider">
+    <siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
       <providers>
-        <add name="secureProvider" type="System.Web.XmlSiteMapProvider"
-             siteMapFile="web.sitemap" securityTrimmingEnabled="true"/>
+        <clear/>
+        <add name="XmlSiteMapProvider"
+             type="System.Web.XmlSiteMapProvider"
+             siteMapFile="Web.sitemap"
+             securityTrimmingEnabled="true"/>
       </providers>
     </siteMap>
     <authentication mode="None" />
@@ -37,17 +52,6 @@
       </providers>
     </sessionState>
   </system.web>
-  <location path="Admin">
-    <system.web>
-      <authorization>
-        <allow roles="admin"/>
-        <deny users="*"/>
-      </authorization>
-      <customErrors>
-        <error statusCode="302" redirect="Contact.aspx" />
-      </customErrors>
-    </system.web>
-  </location>
   <system.webServer>
     <!-- Default start page for root -->
 
