--- a/Source/Data/TheCodeBookProject.Data/TheCodeBookProject.Data.csproj
+++ b/Source/Data/TheCodeBookProject.Data/TheCodeBookProject.Data.csproj
@@ -57,9 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITheCodeBookProjectDbContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\SeedHelper.cs" />
+    <Compile Include="Repositories\Contracts\IRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="TheCodeBookProjectDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
