--- a/Source/Web/TheCodeBookProject.Web.App/TheCodeBookProject.Web.App.csproj
+++ b/Source/Web/TheCodeBookProject.Web.App/TheCodeBookProject.Web.App.csproj
@@ -56,6 +56,22 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject.Extensions.Conventions, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Ninject.Extensions.Conventions.3.2.0.0\lib\net45-full\Ninject.Extensions.Conventions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject.Web, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Ninject.Web.3.2.1.0\lib\net45-full\Ninject.Web.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Ninject.Web.Common, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Ninject.Web.Common.3.2.3.0\lib\net45-full\Ninject.Web.Common.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -87,6 +103,10 @@
     </Reference>
     <Reference Include="System.Web.Optimization, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <HintPath>..\..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -396,6 +416,8 @@
     </Compile>
     <Compile Include="App_Start\DatabaseConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
+    <Compile Include="App_Start\NinjectWeb.cs" />
+    <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Contact.aspx.cs">
@@ -506,6 +528,14 @@
     <ProjectReference Include="..\..\Data\TheCodeBookProject.Data\TheCodeBookProject.Data.csproj">
       <Project>{7c667da9-0f98-47ca-89b2-72aedfe7665d}</Project>
       <Name>TheCodeBookProject.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Services\TheCodeBookProject.Services.Data\TheCodeBookProject.Services.Data.csproj">
+      <Project>{5d083e58-6030-42e7-b3da-de58bddbeb3f}</Project>
+      <Name>TheCodeBookProject.Services.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\TheCodeBookProject.Common\TheCodeBookProject.Common.csproj">
+      <Project>{6359f8b9-dfa4-47ee-b178-5792a1b5da1b}</Project>
+      <Name>TheCodeBookProject.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\TheCodeBookProject.Web.Common\TheCodeBookProject.Web.Common.csproj">
       <Project>{d1192583-fa30-4c13-9feb-d7ed7c8c991b}</Project>
