--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -12,8 +12,8 @@
   <location path="Admin">
     <system.web>
       <authorization>
-        <allow roles="admin"/>
-        <deny users="*"/>
+        <allow roles="admin" />
+        <deny users="*" />
       </authorization>
     </system.web>
   </location>
@@ -22,11 +22,8 @@
   <system.web>
     <siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
       <providers>
-        <clear/>
-        <add name="XmlSiteMapProvider"
-             type="System.Web.XmlSiteMapProvider"
-             siteMapFile="Web.sitemap"
-             securityTrimmingEnabled="true"/>
+        <clear />
+        <add name="XmlSiteMapProvider" type="System.Web.XmlSiteMapProvider" siteMapFile="Web.sitemap" securityTrimmingEnabled="true" />
       </providers>
     </siteMap>
     <authentication mode="None" />
