--- a/Source/Web/TheCodeBookProject.Web.App/TheCodeBookProject.Web.App.csproj
+++ b/Source/Web/TheCodeBookProject.Web.App/TheCodeBookProject.Web.App.csproj
@@ -260,6 +260,14 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Site.Master" />
+    <Content Include="UserControls\ErrorSuccessNotifier\ErrorSuccessNotifier.ascx" />
+    <Content Include="UserControls\ErrorSuccessNotifier\Images\error-icon.png" />
+    <Content Include="UserControls\ErrorSuccessNotifier\Images\info-icon.png" />
+    <Content Include="UserControls\ErrorSuccessNotifier\Images\success-icon.png" />
+    <Content Include="UserControls\ErrorSuccessNotifier\Images\warning-icon.png" />
+    <Content Include="UserControls\ErrorSuccessNotifier\Scripts\ErrorSuccessNotifier.js" />
+    <Content Include="UserControls\ErrorSuccessNotifier\Scripts\jquery-1.3.2.js" />
+    <Content Include="UserControls\ErrorSuccessNotifier\Styles\ErrorSuccessNotifier.css" />
     <Content Include="UserControls\HomeStatistics\HomeStatistics.ascx" />
     <Content Include="UserControls\RatingVisualizer.ascx" />
     <Content Include="UserControls\UserCard\Styles\UserCard.css" />
@@ -496,6 +504,12 @@
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
+    <Compile Include="UserControls\ErrorSuccessNotifier\ErrorSuccessNotifier.ascx.cs">
+      <DependentUpon>ErrorSuccessNotifier.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\ErrorSuccessNotifier\ErrorSuccessNotifier.ascx.designer.cs">
+      <DependentUpon>ErrorSuccessNotifier.ascx</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\HomeStatistics\HomeStatistics.ascx.cs">
       <DependentUpon>HomeStatistics.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
