--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -17,6 +17,22 @@
       </authorization>
     </system.web>
   </location>
+  
+  <location path="Projects">
+    <system.web>
+      <authorization>
+        <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
+  
+  <location path="Developers">
+    <system.web>
+      <authorization>
+        <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
 
   <!-- Sitemap definitions -->
   <system.web>
