--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -4,8 +4,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="TheCodeBookProjectDbConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    <!--<add name="TheCodeBookProjectDbConnection" connectionString="Data Source=.;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />-->
+    <!--<add name="TheCodeBookProjectDbConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <add name="TheCodeBookProjectDbConnection" connectionString="Data Source=.;MultipleActiveResultSets=true;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!-- Definitions for roles access -->
@@ -30,6 +30,15 @@
     <system.web>
       <authorization>
         <deny users="?" />
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Business">
+    <system.web>
+      <authorization>
+        <allow roles="developer, business" />
+        <deny users="*"/>
       </authorization>
     </system.web>
   </location>
