--- a/Source/Web/TheCodeBookProject.Web.App/Web.config
+++ b/Source/Web/TheCodeBookProject.Web.App/Web.config
@@ -3,9 +3,10 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
   <connectionStrings>
-    <!--<add name="TheCodeBookProjectDbConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
-    <add name="TheCodeBookProjectDbConnection" connectionString="Data Source=.;MultipleActiveResultSets=true;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="TheCodeBookProjectDbConnection" connectionString="Server=tcp:pxvjhij5d8.database.windows.net,1433;Database=thecodebookprojectdb;User ID=touristserverdb@pxvjhij5d8;Password=Zelus123;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <!--<add name="TheCodeBookProjectDbConnection" connectionString="Data Source=.;MultipleActiveResultSets=true;Initial Catalog=codebook;Integrated Security=true" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
   <!-- Definitions for roles access -->
@@ -17,7 +18,7 @@
       </authorization>
     </system.web>
   </location>
-  
+
   <location path="Projects">
     <system.web>
       <authorization>
@@ -25,7 +26,7 @@
       </authorization>
     </system.web>
   </location>
-  
+
   <location path="Developers">
     <system.web>
       <authorization>
@@ -45,6 +46,19 @@
 
   <!-- Sitemap definitions -->
   <system.web>
+    <pages>
+
+      <!-- User controls definitions -->
+      <controls>
+        <add tagPrefix="codebook" tagName="notifier" src="~/UserControls/ErrorSuccessNotifier/ErrorSuccessNotifier.ascx"/>
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
+      </controls>
+      <namespaces>
+        <add namespace="System.Web.Optimization" />
+        <add namespace="Microsoft.AspNet.Identity" />
+      </namespaces>
+    </pages>
     <siteMap defaultProvider="XmlSiteMapProvider" enabled="true">
       <providers>
         <clear />
@@ -54,16 +68,6 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Optimization" />
-        <add namespace="Microsoft.AspNet.Identity" />
-      </namespaces>
-      <controls>
-        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-        <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
-      </controls>
-    </pages>
     <profile>
       <providers>
         <clear />
